--- a/DreamLeague.Tests/packages.config
+++ b/DreamLeague.Tests/packages.config
@@ -1,8 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.4.0" targetFramework="net452" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
+  <package id="EntityFrameworkTesting" version="1.2.2" targetFramework="net452" />
+  <package id="EntityFrameworkTesting.Moq" version="1.2.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="Moq" version="4.12.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="NUnit" version="3.12.0" targetFramework="net452" />
+  <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="75.0.3770.140" targetFramework="net452" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net452" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net452" />
 </packages>
