--- a/DreamLeague.Tests/DreamLeague.Tests.csproj
+++ b/DreamLeague.Tests/DreamLeague.Tests.csproj
@@ -124,9 +124,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\CupControllerTests.cs" />
+    <Compile Include="Controllers\FixtureControllerTests.cs" />
     <Compile Include="Controllers\TeamControllerTests.cs" />
     <Compile Include="Controllers\PlayerControllerTests.cs" />
     <Compile Include="Controllers\LeagueControllerTests.cs" />
+    <Compile Include="Controllers\GameWeekControllerTests.cs" />
+    <Compile Include="Controllers\MeetingControllerTests.cs" />
+    <Compile Include="Controllers\DownloadControllerTests.cs" />
+    <Compile Include="Controllers\HistoryControllerTests.cs" />
+    <Compile Include="Controllers\HomeControllerTests.cs" />
     <Compile Include="DAL.Mock\MockDreamLeagueContext.cs" />
     <Compile Include="Data.Mock\TeamData.cs" />
     <Compile Include="Data.Mock\PlayerData.cs" />
