--- a/DreamLeague.Tests/DreamLeague.Tests.csproj
+++ b/DreamLeague.Tests/DreamLeague.Tests.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Controllers\DownloadControllerTests.cs" />
     <Compile Include="Controllers\HistoryControllerTests.cs" />
     <Compile Include="Controllers\HomeControllerTests.cs" />
+    <Compile Include="Controllers\ManagerControllerTests.cs" />
     <Compile Include="DAL.Mock\MockDreamLeagueContext.cs" />
     <Compile Include="Data.Mock\TeamData.cs" />
     <Compile Include="Data.Mock\PlayerData.cs" />
@@ -152,6 +153,7 @@
     <Compile Include="Data.Mock\EmailData.cs" />
     <Compile Include="Data.Mock\AuditData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Mocks\MockControllerContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
