Levenshtein distance algorithm added

--- a/DreamLeague.Tests/DreamLeague.Tests.csproj
+++ b/DreamLeague.Tests/DreamLeague.Tests.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Data.Mock\AuditData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Mocks\MockControllerContext.cs" />
+    <Compile Include="Utilities\LevenshteinDistanceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
@@ -171,9 +172,7 @@
       <Name>DreamLeague</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Services\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
